--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     rel="stylesheet" type="text/css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
-  
 </head>
 <body>
   <div id="main">
@@ -56,11 +55,10 @@
       </div>
     {% endfor %}
 
-
     <div id="footer" class="section text-white">
       <div class="con">
-        {% capture foottext %} {% include footer.md %} {% endcapture %}
-        {{ foottext | markdownify }}
+      <span class="social-icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span>
+      <span class="social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span>
       </div>
     </div>
   </div>
