--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 </head>
 <body>
   <div id="main">
-
-    <nav><ul>
+    <nav>
+    <ul>
       {% for node in site.posts reversed %}
         {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
         <li class="p-{{id}}"><a href="#{{id}}">{{node.title}}</a></li>
       {% endfor %}
+      <li><span class="nav-social-icon"><i class="fa fa-facebook-square" aria-hidden="true"></i></span></li>
+      <li><span class="nav-social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></span></li>
     </ul></nav>
 
 
